fix: some texts being too large

--- a/src/app/pages/error/error.component.scss
+++ b/src/app/pages/error/error.component.scss
@@ -5,6 +5,6 @@
 }
 
 .mat-display-medium,
-.mat-title-large {
+.mat-title-medium {
   text-align: center;
 }
